# django-gamma-cloudinary

./: .gitignore  AUTHORS  MANIFEST.in  README.rst  manifest.json  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml  publish-to-pypi.yml
gamma_cloudinary/: __init__.py  apps.py  config.py  storage.py  utils.py
gamma_cloudinary/storage/: CloudinaryStorage.py  RewriteToCloudinaryUrlMixin.py  StaticCloudinaryStorage.py  helpers.py
gamma_cloudinary/templatetags/: gamma_cloudinary_static.py
tests/: helpers.py  settings.py  test_cloudinary_initialization.py  test_cloudinary_storage.py  test_helpers.py  test_static_cloudinary_storage.py  test_template_tags.py
tests/settings/: __init__.py  staging.py
tests/static/css/: bar.css  foo.css  oswald-fonts.css
tests/static/fonts/Oswald/: demo.html  stylesheet.css
tests/static/js/: bar.js  foo.js
