[metadata]
name = django-gamma-cloudinary
version = attr: gamma_cloudinary.__version__
description = A Django storage backend to integrate with Cloudinary for static files and media storage.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/barakaVictor/django-gamma-cloudinary
author = Victor Baraka Oyuga
author_email = barakavictor62@gmail.com
license =  BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires=
    Django>=3.1
    cloudinary>=1.24.0
    requests>=2.10.0
    python-magic>=0.4.22
packages = find: